--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-youtube": "^10.0.0",
@@ -48,6 +49,7 @@
   },
   "proxy": "http://localhost:3001/api",
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
     "@types/react-transition-group": "^4.4.5"
   },
   "jest": {
